# rubiks

./: Cargo.toml  README.md  build_for_web.sh
assets/: rubik.glb  rubiks.glb  rubiks.gltf
assets/blender/: rubik.blend  rubik.blend1
src/: main.rs  rotate_plane.rs  tokioio.rs
webapp/: index.html  rubiks_cube.js
