[package]
name = "rubiks_cube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[profile.wasm-release]
inherits = "release"
opt-level = "z" 
lto = "fat"
codegen-units = 1

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Remember to revert "dynamic_linking" this before releasing your game
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
#bevy-inspector-egui = "0.28.0"
bevy_tweening = "0.12.0"
# https://docs.rs/smooth-bevy-cameras/latest/smooth_bevy_cameras/
smooth-bevy-cameras = "0.13.0"
