[package]
name = "rubiks_cube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[profile.wasm-release]
inherits = "release"
opt-level = "z" 
lto = "fat"
codegen-units = 1

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Remember to revert "dynamic_linking" this before releasing your game
# bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy = "0.15.0"
bevy-inspector-egui = "0.29.1"
bevy_panorbit_camera = { version = "0.22.1", features = ["bevy_egui"] }
bevy_tweening = "0.12.0"

#bevy-inspector-egui = "0.28.0"

## rand = "0.9.0"
## rand_chacha = "0.9.0"
## pin-project-lite = "0.2.16"

## bevy-tokio-tasks = "0.15.0"
## crossbeam-channel = "0.5.14"
## tokio = { version = "1.43.0", features = ["net"] }
## futures-util = "0.3"
## http-body-util = "0.1.2"
## hyper = { version = "1.6.0", features = ["server", "http1"] }
